Fixed align to box-align for li

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ ul {
 }
 
 li {
-    align: right;
+    box-align: right;
 }
 
 li a {
